codegen/tests/compiler_output/missing-return.stderr
error: klyra_runtime::main functions need to return a service

         = help: See the docs for services with first class support
         = note: https://docs.rs/klyra-runtime/latest/klyra_runtime/attr.main.html#klyra-supported-services

 --> tests/compiler_output/missing-return.rs:2:1
  |
2 | async fn missing_return() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compiler_output/missing-return.rs:2:29
  |
2 | async fn missing_return() {}
  |                             ^ consider adding a `main` function to `$DIR/tests/compiler_output/missing-return.rs`
